--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="name">George Lockhart </h1>
     <p id="bio">Thanks for visiting my webpage you can click on the link below to messsge me and applied for the dhhs grant money.</p>
     <div id="links-container"></div>
-    <a href="tel:+1234567890" class="link">Text Me</a>
+    <a href="tel:+1 202-640-2568" class="link">Text Me</a>
   </div>
 
   <script src="script.js"></script>
