--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <footer>
-      <img src="/storage/emulated/0/bio/dhhs.jpg" alt="web icon">
+      <img src="dhhs.jpg" alt="web icon">
       
     </footer>
     <header>
@@ -17,7 +17,7 @@
       <p>OFFICIAL WEBSITE FOR DHHS GRANT PROGRAM</p>
     </header>
     <section class="profile">
-      <img src="/storage/emulated/0/bio/imga.jpg" alt="Profile Picture">
+      <img src="imga.jpg" alt="Profile Picture">
       <h2>MaryAnn Callahan<span class="verify-badge">✔</span></h2>
       <p>Official Agent In Charge Of The DHHS
       </p>
