--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <section class="links">
   <a href="https://www.facebook.com/profile.php?id=100090239093221&mibextid=ZbWKwL" target="_blank">Facebook</a>
-  <a href="tel:+13345430894" target="_blank">Text me</a>
+  <a href="tel:+1424-417-0689 " target="_blank">Text me</a>
 </section>
     <footer>
       <p>© 2024 MaryAnn Callahan. All Rights Reserved.</p>
